--- a/dependency-management/checkingneighbours/app/build.gradle
+++ b/dependency-management/checkingneighbours/app/build.gradle
@@ -14,14 +14,20 @@ plugins {
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
+    maven {
+        url "https://repo.maven.apache.org/maven2"
+    }
 }
 
 dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.2'
+    //testImplementation libs.junit
+
+    testImplementation 'org.assertj:assertj-core:3.11.1'
 
     // This dependency is used by the application.
-    implementation 'com.google.guava:guava:30.1.1-jre'
+    //implementation 'com.google.guava:guava:30.1.1-jre'
 }
 
 application {
