--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,10 @@ jobs:
     permissions:
       contents: read
 
+    defaults:
+      run:
+        working-directory: ./dependency-management/checkingneighbours
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
@@ -61,6 +65,11 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Run tests
+      run: ./gradlew test
     # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
     - name: Generate and submit dependency graph
